# True-texture-detector-AI-system

./: .gitignore  PROJECT_PLAN.md  README.md  app.py  conv.md  pyproject.toml
data/: category_materials.json  fabric_physics.json
scripts/: calibrate_threshold.py  category_coverage.py  check_bedrock.py  check_llm.py  check_negation.py  demo.py  list_groq_models.py  run_concierge.py  run_llmops.py  run_phase1.py  run_phase2.py  run_phase3.py  seed_mock_insights.py  test_live_concierge.py
src/: __init__.py
src/concierge/: __init__.py  bedrock_client.py  concierge.py  gemini_client.py  graph.py  groq_client.py  insights_store.py  mock_chat.py  portkey_llm.py  provider.py  seller_escalation.py  skill.md  tools.py
src/diagnosis/: __init__.py  diagnose.py  negation.py
src/ingest/: __init__.py  download_dataset.py
src/llmops/: __init__.py  config.py  diagnose.py  evaluate.py  gate.py  observe.py  tracer.py
src/nlp/: __init__.py  semantic_filter.py
src/physics/: __init__.py  category_materials.py  fabric_ontology.py
src/visual/: __init__.py  clip_audit.py
