[project]
name = "true-texture"
version = "0.1.0"
description = "Returns intelligence prototype: fabric/texture mismatch detection for fashion ecommerce"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Phase 1 (data + NLP core) — all local/free
    "huggingface_hub>=0.23",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "pandas>=2.0",
    # Phase 3 (visual corroboration)
    "transformers>=4.40",
    "pillow>=10.0",
    "requests>=2.31",
    # Phase 4-5 (LangGraph concierge + Portkey AI gateway + dashboard)
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "portkey-ai>=2.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34",
    "streamlit>=1.35",
    # Phase 7 (LLM Ops tracing — Langfuse Cloud)
    "langfuse>=4.0",
    "rembg[cpu]>=2.0.76",
    "numba>=0.60",
]

[tool.uv]
package = false
